--- a/StoryParser.csproj
+++ b/StoryParser.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Input\" />
+    <Folder Include="Output\" />
     <Folder Include="Scripts\" />
   </ItemGroup>
 
